<resources>
    <string name="app_name">Veggfarm</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">VERIFY</string>
    <string name="please_enter_your_verification_code_sent_to_your_mobile_number">Please enter your verification code sent to your mobile number.</string>
    <string name="verify_your_number">VERIFY YOUR NUMBER</string>
    <string name="send_otp">Send OTP</string>
    <string name="please_enter_your_mobile_number_to_receive_a_verification_code_carrier_rates_may_apply">Please enter your mobile number to receive a verification code. Carrier rates may apply</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_category_main">CategoryMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="items">VEGETABLES</string>
    <string name="fruits">FRUITS</string>
    <string name="all">ALL</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_category">MainCategoryActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="trouble_with_login">Trouble with login</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="already_have_an_account">Already have an account ? Login</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="save_details">Save Details</string>
    <string name="place_order">Place Order</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="add">add</string>
    <string name="price_0_items">Price (0 items)</string>
    <string name="total">Total</string>
    <string name="price_details">Price details</string>
    <string name="free">FREE</string>
    <string name="delivery">Delivery</string>
    <string name="rs_0">RS 0</string>
    <string name="confirm">CONFIRM</string>
    <string name="vegetable">Vegetable</string>
    <string name="send">Send</string>
</resources>
