<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VerifyPhoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/smartphone" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/verify_your_number"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/please_enter_your_verification_code_sent_to_your_mobile_number"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />


        <com.chaos.view.PinView
            android:id="@+id/editTextCode"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:inputType="phone"
            android:padding="20dp"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/colorBlack"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="false"
            app:itemCount="6"
            app:itemHeight="48dp"
            app:itemRadius="4dp"
            app:itemSpacing="0dp"
            app:itemWidth="48dp"
            app:lineColor="@color/colorGreen"
            app:lineWidth="2dp"
            app:viewType="rectangle" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/company_color_back"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="#ffffff" />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>